--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -3,46 +3,62 @@ title: <CreateOrganization />
 description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<CreateOrganization />`
 
 <Images
   alt="Organization Switcher Example"
   width={992}
   height={568}
-  src="/docs/images/ui-components/component-org_switcher.svg"
+  src="/docs/images/ui-components/component-org_create.svg"
 />
 
 The `<CreateOrganization />` component is used to render an organization creatio UI that allows users to create brand new organizations within you application.
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/create-organization/[[...index]].tsx"
-import { CreateOrganization } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
+      import { CreateOrganization } from "@clerk/nextjs";
 
-export default function CreateOrganizationPage() {
-  return <CreateOrganization />;
-}
-```
-```jsx copy filename="/create-organization.tsx"
-import { CreateOrganization } from "@clerk/clerk-react";
+      export default function CreateOrganizationPage() {
+        return <CreateOrganization />;
+      }
+      ```
+      
+      ```jsx copy filename="/pages/create-organization/[[...index]].[jsx/tsx]"
+      import { CreateOrganization } from "@clerk/nextjs";
 
-export default function CreateOrganizationPage() {
-  return <CreateOrganization />;
-}
-```
-```jsx copy filename="/route/create-organization/$.tsx"
-import { CreateOrganization } from "@clerk/remix";
+      export default function CreateOrganizationPage() {
+        return (
+            <CreateOrganization routing="path" path="/create-organization" />
+        )
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-export default function CreateOrganizationPage() {
-  return <CreateOrganization />;
-}
-```
-</CodeBlockTabs>
+  <Tab>
+    ```jsx copy filename="/create-organization.tsx"
+    import { CreateOrganization } from "@clerk/clerk-react";
+
+    export default function CreateOrganizationPage() {
+      return <CreateOrganization />;
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/route/create-organization/$.tsx"
+    import { CreateOrganization } from "@clerk/remix";
+
+    export default function CreateOrganizationPage() {
+      return <CreateOrganization />;
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ## Props
 
@@ -56,31 +72,34 @@ All props below are optional.
       cells: [
         <code>afterCreateOrganizationUrl</code>,
         <code>string</code>,
-        "Full URL or path to navigate after creating a new organization.",
+        <>Full URL or path to navigate after creating a new organization.</>,
       ],
     },
     {
       cells: [
         <code>path</code>,
         <code>string</code>,
-        "The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.",
+        <>The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.</>,
       ],
     },
     {
       cells: [
         <code>routing</code>,
         <code>RoutingStrategy</code>,
-        `The routing strategy for your pages. Supported values are:
-- hash (default): Hash based routing.
-- path: Path based routing.
-- virtual: Virtual based routing.`,
+        <>The routing strategy for your pages. Supported values are:
+          <ul>
+            <li>hash (default): Hash based routing.</li>
+            <li>path: Path based routing.</li>
+            <li>virtual: Virtual based routing.</li>
+          </ul>
+        </>,
       ],
     },
     {
       cells: [
         <code>appearance</code>,
         <code>object</code>,
-        "Control the look and feel of the component.",
+        <>Control the look and feel of the component.</>,
       ],
     },
   ]}
