--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -3,10 +3,6 @@ title: <OrganizationProfile />
 description: The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<OrganizationProfile />`
 
 <Images
@@ -20,29 +16,53 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/organization-profile/[[...index]].tsx"
-import { OrganizationProfile } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    You can embed the `<OrganizationProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
+  
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
+      import { OrganizationProfile } from "@clerk/nextjs";
 
-export default function OrganizationProfilePage() {
-  return <OrganizationProfile />;
-}
-```
-```jsx copy filename="organization-profile.tsx"
-import { OrganizationProfile } from "@clerk/clerk-react";
+      export default function OrganizationProfilePage() {
+        return (
+          <OrganizationProfile routing='path' path="/organization-profile" />
+        )
+      }
+      ```
 
-export default function OrganizationProfilePage() {
-  return <OrganizationProfile />;
-}
-```
-```jsx copy filename="/pages/organization-profile/$.tsx"
-import { OrganizationProfile } from "@clerk/remix";
+      ```jsx copy filename="/pages/organization-profile/[[...index]].[jsx/tsx]"
+      import { OrganizationProfile } from "@clerk/nextjs";
 
-export default function OrganizationProfilePage() {
-  return <OrganizationProfile />;
-}
-```
-</CodeBlockTabs>
+      export default function OrganizationProfilePage() {
+        return (
+          <OrganizationProfile />
+        )
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="organization-profile.tsx"
+    import { OrganizationProfile } from "@clerk/clerk-react";
+
+    export default function OrganizationProfilePage() {
+      return <OrganizationProfile />;
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/pages/organization-profile/$.tsx"
+    import { OrganizationProfile } from "@clerk/remix";
+
+    export default function OrganizationProfilePage() {
+      return <OrganizationProfile />;
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ## Props
 
@@ -56,31 +76,34 @@ All props below are optional.
       cells: [
         <code>afterLeaveOrganizationUrl</code>,
         <code>string</code>,
-        "Full URL or path to navigate after leaving an organization.",
+        <>Full URL or path to navigate after leaving an organization.</>,
       ],
     },
     {
       cells: [
         <code>path</code>,
         <code>string</code>,
-        "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
+        <>The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.</>,
       ],
     },
     {
       cells: [
         <code>routing</code>,
         <code>RoutingStrategy</code>,
-        `The routing strategy for your pages. Supported values are:
-- hash (default): Hash based routing.
-- path: Path based routing.
-- virtual: Virtual based routing.`,
+        <>The routing strategy for your pages. Supported values are:
+          <ul>
+            <li>hash (default): Hash based routing.</li>
+            <li>path: Path based routing.</li>
+            <li>virtual: Virtual based routing.</li>
+          </ul>
+        </>,
       ],
     },
     {
       cells: [
         <code>appearance</code>,
         <code>object</code>,
-        "Control the look and feel of the component.",
+        <>Control the look and feel of the component.</>,
       ],
     },
   ]}
