--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -3,10 +3,6 @@ title: <OrganizationSwitcher />
 description: The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<OrganizationSwitcher />`
 
 <Images
@@ -20,41 +16,63 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
-import { OrganizationSwitcher } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
+      import { OrganizationSwitcher } from "@clerk/nextjs";
 
-export default function OrganizationSwitcherPage() {
-  return (
-    <div>
-      <OrganizationSwitcher />
-    </div>
-  );
-}
-```
-```jsx copy filename="organization-switcher.tsx"
-import { OrganizationSwitcher } from "@clerk/clerk-react";
+      export default function OrganizationSwitcherPage() {
+        return (
+          <div>
+            <OrganizationSwitcher />
+          </div>
+        );
+      }
+      ```
 
-export default function OrganizationSwitcherPage() {
-  return (
-    <div>
-      <OrganizationSwitcher />
-    </div>
-  );
-}
-```
-```jsx copy filename="/pages/organization-switcher/$.tsx"
-import { OrganizationSwitcher } from "@clerk/remix";
+      ```jsx copy filename="/pages/organization-switcher/[[...index]].[jsx/tsx]"
+      import { OrganizationSwitcher } from "@clerk/nextjs";
 
-export default function OrganizationSwitcherPage() {
-  return (
-    <div>
-      <OrganizationSwitcher />
-    </div>
-  );
-}
-```
-</CodeBlockTabs>
+      export default function OrganizationSwitcherPage() {
+        return (
+          <div>
+            <OrganizationSwitcher />
+          </div>
+        );
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="organization-switcher.tsx"
+    import { OrganizationSwitcher } from "@clerk/clerk-react";
+
+    export default function OrganizationSwitcherPage() {
+      return (
+        <div>
+          <OrganizationSwitcher />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/pages/organization-switcher/$.tsx"
+    import { OrganizationSwitcher } from "@clerk/remix";
+
+    export default function OrganizationSwitcherPage() {
+      return (
+        <div>
+          <OrganizationSwitcher />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
 
 
 ## Props
@@ -69,14 +87,14 @@ All props below are optional.
       cells: [
         <code>afterCreateOrganizationUrl</code>,
         <code>string</code>,
-        "Full URL or path to navigate after creating a new organization.",
+        <>Full URL or path to navigate after creating a new organization.</>,
       ],
     },
     {
       cells: [
         <code>appearance</code>,
         <code>object</code>,
-        "Control the look and feel of the component.",
+        <>Control the look and feel of the component.</>,
       ],
     },
     {
@@ -99,8 +117,8 @@ All props below are optional.
         <code>'modal' | 'navigation'</code>,
         <>
           Controls whether clicking the "Create organization" button will cause
-          the <code>CreateOrganization</code> component to open as a modal, or if the browser will navigate
-          to the <code>createOrganizationUrl</code> where <code>CreateOrganization</code> is mounted as a page.
+          the <code>{"<CreateOrganization />"}</code> component to open as a modal, or if the browser will navigate
+          to the <code>createOrganizationUrl</code> where <code>{"<CreateOrganization />"}</code> is mounted as a page.
           <br/>
           Defaults to: <code>"modal"</code>
         </>,
@@ -112,10 +130,9 @@ All props below are optional.
         <code>'modal' | 'navigation'</code>,
         <>
           Controls whether clicking the "Manage organization" button will cause
-          the <code>OrganizationProfile</code> component to open as a modal, or if the browser will navigate
-          to the <code>organizationProfileUrl</code> where <code>OrganizationProfile</code> is mounted as a page.
-          <br/>
-          Defaults to: <code>"modal"</code>
+          the <code>{"<OrganizationProfile />"}</code> component to open as a modal, or if the browser will navigate
+          to the <code>organizationProfileUrl</code> where <code>{"<OrganizationProfile />"}</code> is mounted as a page.
+          <br/>Defaults to: <code>"modal"</code>
         </>,
       ],
     },
@@ -139,11 +156,10 @@ All props below are optional.
         <code>boolean</code>,
         <>
           By default, users can switch between organization and their personal account.
-          This option controls whether OrganizationSwitcher will include the user's personal account
-          in the organization list. Setting this to `false` will hide the personal account entry,
+          This option controls whether <code>{"<OrganizationSwitcher />"}</code> will include the user's personal account
+          in the organization list. Setting this to <code>false</code> will hide the personal account entry,
           and users will only be able to switch between organizations.
-          <br/>
-          Defaults to: <code>true</code>
+          <br/>Defaults to: <code>true</code>
         </>,
       ],
     },
@@ -152,7 +168,7 @@ All props below are optional.
       cells: [
         <code>defaultOpen</code>,
         <code>boolean</code>,
-        <>Controls the default state of the <code>OrganizationSwitcher</code></>,
+        <>Controls the default state of the <code>{"<OrganizationSwitcher />"}</code></>,
       ],
     },
   ]}
