--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -3,10 +3,6 @@ title: <UserProfile />
 description: The `<UserProfile />` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<UserProfile />`
 
 <Images
@@ -21,33 +17,55 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 ## Usage
 
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/user-profile/[[...index]].tsx"
-import { UserProfile } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    You can embed the `<UserProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
 
-const UserProfilePage = () => (
-  <UserProfile path="/user-profile" routing="path" />
-);
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      import { UserProfile } from "@clerk/nextjs";
 
-export default UserProfilePage;
-```
-```jsx copy filename="/user-profile.tsx"
-import { UserProfile } from "@clerk/clerk-react";
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path" />
+      );
 
-const UserProfilePage = () => (
-  <UserProfile path="/user-profile" routing="path" />
-);
+      export default UserProfilePage;
+      ```
 
-export default UserProfilePage;
-```
-```tsx filename="routes/user/$.tsx" copy
-import { UserProfile } from "@clerk/remix";
+      ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
+      import { UserProfile } from "@clerk/nextjs";
 
-export default function UserProfilePage() {
-  return <UserProfile path="/user" routing="path" />;
-}
-```
-</CodeBlockTabs>
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path" />
+      );
+
+      export default UserProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/user-profile.tsx"
+    import { UserProfile } from "@clerk/clerk-react";
+
+    const UserProfilePage = () => (
+      <UserProfile path="/user-profile" routing="path" />
+    );
+
+    export default UserProfilePage;
+    ```
+  </Tab>
+
+  <Tab>
+    ```tsx filename="routes/user/$.tsx" copy
+    import { UserProfile } from "@clerk/remix";
+
+    export default function UserProfilePage() {
+      return <UserProfile path="/user" routing="path" />;
+    }
+    ```
+  </Tab>
+</Tabs>
 
 
 ## Props
@@ -59,15 +77,22 @@ All props below are optional.
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {
-      cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
+      cells: [
+        <code>appearance</code>, 
+        <code>object</code>, 
+        <>Controls the overall look and feel.</>
+      ],
     },
     {
       cells: [
         <code>routing</code>,
         <code>RoutingStrategy</code>,
-        `The routing strategy for your pages. Supported values are:
-- Hash (default): Hash based routing.
-- Path: Path based routing.`,
+        <>The routing strategy for your pages. Supported values are:
+          <ul>
+            <li>Hash (default): Hash based routing.</li>
+            <li>Path: Path based routing.</li>
+          </ul>
+        </>,
       ],
     },
     {
