--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -5,7 +5,7 @@ description: The `useUser` hook is used to get the current user object and to up
 
 # `useUser()`
 
-The `useUser` hook is used to get the current user object and to update the user's data on the client side.
+The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
 ## Usage
 
