--- a/docs/authentication/overview.mdx
+++ b/docs/authentication/overview.mdx
@@ -5,6 +5,8 @@ description: Learn how to configure authentication and user management for your 
 
 # Sign-up & Sign-in
 
+Clerk supports multiple authentication strategies so that you can implement the strategy that makes sense for *your* users. You can use Clerk's [hosted pages](/docs/authentication/using-clerk-hosted-pages), [pre-built components](/docs/authentication/components/overview), or [build your own custom flows](/docs/custom-flows/overview).
+
 ## Configuration
 
 Clerk's configuration settings affect how the users of your application can sign up and sign in and which attributes are editable via their user profile. You can find these settings under the **User & Authentication** section in your [Clerk Dashboard](https://dashboard.clerk.dev/).
