--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -105,7 +105,7 @@ For development, set your static fallback localhost (e.g. http://localhost:3000)
   
 ### Redirects
 
-Next, you can specify the fallback redirects through the dashboard as well. 
+You can specify the fallback redirects through the Clerk Dashboard. 
 
 <Images 
   width={3248}
